src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_statements_tests__missing_semicolon_after_call.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected `;` but found 'foo()'
  ┌─ <internal>:4:21
  │
4 │                     foo();
  │                     ^^^^^ Unexpected token: expected `;` but found 'foo()'
